--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,135 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #E5B8F4;
+  min-height: 100vh;
 }
+
+.mobile {
+  width: 100vw;
+  max-width: 30em;
+  background-color: #C147E9;
+  min-height: 100vh;
+  
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  padding: 0 5em;
+  min-height: 100vh;
+  justify-content: center;
+
+}
+
+.title {
+  font-size: 2em;
+  text-align: center;
+}
+
+
+
+.key {
+  margin-right: .5em;
+  font-size: 1.5em;
+}
+
+.expressions {
+  padding-bottom: 2em;
+}
+
+.expression {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1em 0;
+}
+
+.input {
+  background-color: rgba(255, 255, 255, .1);
+  border: none;
+  border-bottom: 2px solid rgb(87, 87, 87);
+  font-size: 1.5em;
+  width: auto;
+  outline: none;
+}
+
+.btns {
+  display: flex;
+  flex-direction: column;
+  margin: 0 .9em;
+}
+
+.btn {
+  cursor: pointer;
+  margin-bottom: .3em;
+  background-color: purple;
+  color: lightgray;
+  padding: .5em 1em;
+  border-radius: .2em;
+  text-align: center;
+}
+
+.alert {
+
+  width: 80vw;
+  background-color: rgb(200, 118, 172);
+  padding: 1em;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.alert__title{
+  margin-bottom: .3em;
+  font-size: 1.3em;
+}
+
+.alert__text{
+  font-size: 1.1em;
+  text-align: center;
+}
+
+.alert-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 100vw;
+  max-width: 30em;
+
+  height: 100vh;
+  transform: translate(-50%, -50%);
+
+  background-color: rgba(0, 0, 0, .5);
+}
+
+.step {
+  font-size: 1.3em;
+  margin-bottom: .3em
+}
+
+.solution {
+  font-size: 1.5em;
+  font-weight: 600;
+  margin-left: 1em;
+}
+
+.result-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
